Exclude mobile files from Next.js build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,9 @@
     "out/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "App.tsx",
+    "screens",
+    "android"
   ]
 }
